# dng_writer

./: .gitignore  CMakeLists.txt  build.gradle  loadDeps.cmake  test.cpp
dngwriter/: CustomMatrix.h  DngProfile.h  DngWriter.cpp  DngWriter.h
freedcam/: CustomMatrix.cpp  CustomMatrix.h  DngProfile.cpp  DngProfile.h  DngTags.h  DngWriter.cpp  DngWriter.h  ExifInfo.h
src/androidTest/java/com/freedcam/dng_writer/: ExampleInstrumentedTest.java
src/main/cpp/tiff/libtiff/: tif_unix.c
src/main/java/com/freedcam/dng_writer/: NativeLib.java
src/test/java/com/freedcam/dng_writer/: ExampleUnitTest.java
tiff/contrib/addtiffo/: CMakeLists.txt
tiff/contrib/dbs/xtiff/: CMakeLists.txt
tiff/contrib/mfs/: CMakeLists.txt
tiff/contrib/pds/: CMakeLists.txt
tiff/contrib/ras/: CMakeLists.txt
tiff/contrib/stream/: CMakeLists.txt
tiff/contrib/tags/: CMakeLists.txt
tiff/contrib/win_dib/: CMakeLists.txt
tiff/libtiff/: CMakeLists.txt
